--- a/Encryption Tool/MainWindow.xaml
+++ b/Encryption Tool/MainWindow.xaml
@@ -7,6 +7,10 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <TextBox x:Name="UserSecret" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Center" Width="144" Height="42"/>
+        <Button x:Name="BtnEncrypt" Content="Encrypt" HorizontalAlignment="Left" Margin="285,288,0,0" VerticalAlignment="Top" Click="BtnEncrypt_Click"/>
+        <Button x:Name="BtnDecrypt" Content="Decrypt" HorizontalAlignment="Left" Margin="458,288,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="TxtShowText" HorizontalAlignment="Center" Height="107" Margin="0,74,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="264"/>
+
     </Grid>
 </Window>
